--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,7 +59,8 @@
   "files.associations": {
     "ostream": "cpp",
     "iostream": "cpp",
-    "*.tcc": "cpp"
+    "*.tcc": "cpp",
+    "new": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
